--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
             </li>
         </ul>
 
-        <button class="hamburger">
-            <i class="fas fa-bars "></i>
-        </button>
+
+
+        <div class="hamburger crsr-ptr " >
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
 
     <main class="landing-page ">
